# DSW-2025L-GraphRAG

./: .env  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  embedding_utils.py  pyproject.toml  report.html
.devcontainer/: .bashrc  devcontainer.json
app/: app.py  chat_script.py  embedding_utils.py  example.py  pyproject.toml  question_template.json  sparql_query_processor.py  template_embedding.ipynb
app/chat_utils/: connection_utils.py
app/data/: template_embeddings.json  template_metadata.json
app/models/: __init__.py  params.py  templates.py
app/notebooks/: template_embedding.ipynb
app/templates/: _prefixes.jinja  avg_measurement_by_device.rq.j2  avg_measurement_by_floor.rq.j2  avg_te.j2  count_devices_by_status.rq.j2  count_devices_on_floor.rq.j2  count_rooms_on_floor.rq.j2  count_type_on_floor.rq.j2  count_window_openings_in_room.rq.j2  count_window_openings_on_floor.rq.j2  latest_measurement_from_device.rq.j2  list_device_properties.rq.j2  list_devices_and_types_on_floor.rq.j2  max_measurement_in_building.rq.j2  min_measurement_in_building.rq.j2  template1.rq.j2  template2.rq.j2  template_metadata.json  test_cases.json  was_window_opened_in_room.rq.j2  was_window_opened_on_floor.rq.j2
app/ui/: app.py
data/: template_embeddings.json
fuseki/: config.ttl  shiro.ini
scripts/: generate_template_metadata.py
templates/: template2.rq.j2
tests/: conftest.py  test_all.py  test_cases.json  test_integration.py  test_simple.py  test_sparql_processor.py
