[tool.poetry]
name = "OfficeGraphRAG"
version = "0.1.0"
description = "OfficeGraphRAG development environment"
authors = ["Bartosz Grabek <bartosz.grabek.stud@pw.edu.pl>", "Izabela Telejko <izabela.telejko.stud@pw.edu.pl>", "Grzegorz Zbrzeżny <grzegorz.zbrzezny.stud@pw.edu.pl>", "Tomasz Siudalski <tomasz.siudalski.stud@pw.edu.pl>"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
rdflib = "^7.1.4"
notebook = "^7.4.1"
ipykernel = "^6.29.5"
sentence-transformers = "^4.1.0"
streamlit = "^1.45.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
